--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -1,9 +1,9 @@
+
 header {
     background-color: white;
     display: flex;
     padding: 10px 0;
     width: 100%;
-    box-shadow: 10px 10px 5px #0000000F;
 
 
     justify-content: space-between;
@@ -51,8 +51,12 @@ header {
 }
 
 .seach {
-    border: 1px solid #e6e6e6;
+    
     display: flex;
+
+    form {
+        width: 600px;
+    }
 
     .dropdown {
         display: flex;
@@ -68,7 +72,9 @@ nav {
 
 .container {
     display: flex;
+    justify-content: space-between;
     padding-top: 10px;
+    max-width: 1470px;
 
 }
 
@@ -77,7 +83,12 @@ nav {
     background-color: #FFFFFF;
     padding: 10px;
     max-width: 260px;
-    position: relative;
+    
+
+    .leftone {
+        position: relative;
+
+    }
 
     .community {
         display: flex;
@@ -122,6 +133,7 @@ nav {
     padding: 10px;
     position: absolute;
     right: 0px;
+
     width: 260px;
 
     .right-page {
@@ -146,7 +158,7 @@ nav {
 
     .useres {
         display: flex;
-        gap: 30px;
+        gap: 50px;
         justify-content: center;
         padding-top: 20px;
     }
@@ -176,17 +188,18 @@ nav {
     }
 
     .chatone {
+        position: relative;
         color: #4284F3;
         font-weight: 400;
         font-size: 14px;
         line-height: 22px;
-        position: relative;
+
     }
 
     .teck {
         position: absolute;
         top: 0px;
-        right: 40%;
+        right: -15px;
     }
 
     .chattow {
@@ -199,18 +212,19 @@ nav {
             border-radius: 3px;
         }
     }
+
     .chattrue {
-        display:flex ;
+        display: flex;
         border: 1px solid #4284F3;
         padding: 2px;
         border-radius: 3px;
 
-        
+
         p {
             color: #838383;
-        font-weight: 400;
-        font-size: 10px;
-        line-height: 10px;
+            font-weight: 400;
+            font-size: 10px;
+            line-height: 10px;
         }
 
         img {
@@ -218,6 +232,22 @@ nav {
             width: 10px;
         }
 
+    }
+    .chattowminit {
+        display: flex;
+        align-items: center;
+        gap:5px
+    
+    }
+
+    .chattrueminit {
+
+        p {
+            color: #838383;
+            font-weight: 400;
+            font-size: 10px;
+            line-height: 10px;
+        }
     }
 
 }
