--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -74,7 +74,7 @@ nav {
     display: flex;
     justify-content: space-between;
     padding-top: 10px;
-    max-width: 1470px;
+    max-width: 1900px;
 
 }
 
@@ -82,7 +82,8 @@ nav {
     flex: 1;
     background-color: #FFFFFF;
     padding: 10px;
-    max-width: 260px;
+    width: 260px;
+   
     
 
     .leftone {
