--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -1,4 +1,12 @@
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
 
+.crooll::-webkit-scrollbar {
+    display: none;
+  }
+  
 header {
     background-color: white;
     display: flex;
