--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -21,26 +21,27 @@ header {
         ul {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 24px;
 
         }
 
         .farm {
             display: flex;
             align-items: center;
+            gap: 10px;
         }
 
     }
 
     .degree {
-        font-size: 12px;
-        color: #28CD41;
-        font-weight: 400;
+        font-size: 14px;
+        color: #1F1F1F;
+        font-weight: 500;
     }
 
     .cloud {
         color: #000000;
-        font-size: 10px;
+        font-size: 12px;
         font-weight: 400;
     }
 
@@ -59,13 +60,9 @@ header {
 
 }
 
-.seach {
+.containerSeach {
     
     display: flex;
-
-    form {
-        width: 600px;
-    }
 
     .dropdown {
         display: flex;
@@ -91,31 +88,13 @@ nav {
     background-color: #FFFFFF;
     padding: 10px;
     width: 300px;
-    border-radius: 8px;
+    border-top-right-radius: 0.5rem; 
+    border-bottom-right-radius: 0.5rem;
    
     
 
     .leftone {
         position: relative;
-
-    }
-
-    .community {
-        display: flex;
-        align-items: center;
-
-        img {
-            position: absolute;
-            right: 10px;
-
-        }
-    }
-
-    p {
-        color: #4284F3;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 22px;
 
     }
 
@@ -150,7 +129,8 @@ nav {
     right: 0px;
     top: 70px;
     width: 300px;
-    border-radius: 8px;
+    border-top-left-radius: 0.5rem; 
+    border-bottom-left-radius: 0.5rem;
 
     .right-page {
         display: flex;
@@ -221,6 +201,7 @@ nav {
         top: 0px;
         right: -15px;
     }
+    
 
     .chattow {
         display: flex;
@@ -271,3 +252,13 @@ nav {
     }
 
 }
+.teckone {
+    transform: translate(5px,-10px);
+
+}
+.list::-webkit-scrollbar {
+    display: none;
+  }
+  .all::-webkit-scrollbar {
+    display: none;
+  }
