--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -260,6 +260,9 @@ nav {
 .tecktwo {
     transform: translate(-98px, -42px);
 }
+.rescue {
+    transform: translate(-13px, -41px);
+}
 
 .list::-webkit-scrollbar {
     display: none;
