--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -263,6 +263,9 @@ nav {
 .rescue {
     transform: translate(-13px, -41px);
 }
+.ensign {
+    transform: translate(0px, -65px);
+}
 
 .list::-webkit-scrollbar {
     display: none;
