--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -204,11 +204,6 @@ nav {
 
     }
 
-  
-
-
-    
-
     .chattrue {
         display: flex;
         border: 1px solid #4284F3;
@@ -263,6 +258,10 @@ nav {
 }
 .ensign {
     transform: translate(0px, -65px);
+}
+.close {
+    transform: translate(0px, -25px);
+
 }
 
 .list::-webkit-scrollbar {
