--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -263,6 +263,9 @@ nav {
     transform: translate(0px, -25px);
 
 }
+.towmo {
+    transform: translate(-6px, -38px);
+}
 
 .list::-webkit-scrollbar {
     display: none;
