--- a/src/styles/add.scss
+++ b/src/styles/add.scss
@@ -269,6 +269,9 @@ nav {
 .ensign {
     transform: translate(-6px, -38px);
 }
+.tone {
+    transform: translate(0px, -28px);
+}
 
 .left::-webkit-scrollbar {
     display: none;
